# alt-text-generator

./: .gitignore  .replit  CLEANUP_SUMMARY.md  GITHUB_DEPLOYMENT.md  HOSTING_GUIDE.md  README.md  ZOHO_TEAM_UPDATE.md  alt_text_generator.py  app.py  config.json  create_final_sample.py  create_instructions_sheet.py  create_sample_excel.py  create_working_sample.py  deploy.py  env.example  excel_processor.py  gunicorn.conf.py  image_analyzer.py  main.py  pyproject.toml  railway.json  replit.md  requirements.txt  routes.py  sample_images.xlsx  simple_alt_generator.py  simple_config.json  simple_setup.py  test_simple.py
static/css/: custom.css
static/js/: app.js
temp/: test_updated.xlsx  updated_a62abb0a-640c-4113-abd2-5186c2f3e7bd_sample_excel_format.xlsx
templates/: index.html
uploads/: 0e5d2b6e-fdca-412b-bd5f-256cb845f3cb_sample_excel_format.xlsx  12d1629e-7eb6-45ef-bed8-1a7f64f11836_sample_excel_format.xlsx  93fb0509-29e6-4329-a9ab-513f5f68d4b8_sample_excel_format_1.xlsx  a62abb0a-640c-4113-abd2-5186c2f3e7bd_sample_excel_format.xlsx  de7dd8d0-1167-4be7-b7f9-070ca17c88ff_sample_excel_format.xlsx  f403ddd1-f211-477b-81c6-802858645b07_sample_excel_format.xlsx
