[project]
name = "alt-text-generator"
version = "1.0.0"
description = "Automated SEO alt text generator for Google Sheets"
requires-python = ">=3.9"
dependencies = [
    "google-generativeai>=0.3.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "requests>=2.32.0",
    "schedule>=1.2.0",
]
